--- a/src/app/group-bar-chart/group-bar-chart.component.scss
+++ b/src/app/group-bar-chart/group-bar-chart.component.scss
@@ -1,12 +1,5 @@
 .mat-card {
   width: 100%;
-  // .ngx-charts {
-  //   width: 100%;
-  // }
-  // .ngx-charts-outer {
-  //   width: 100%;
-  // }
+  padding: 0px;
+  height: 400px;
 }
-// .ngx-charts-bar-vertical-2d {
-//   width: 100%;
-// }
