--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,7 @@ body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
 }
+h1 {
+  margin-left: 15px;
+  color: #1a0505b0;
+}
